<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_self_improvement_24"
            android:title="Profile"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_webViewFragment"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/browser" />
        <item
            android:id="@+id/nav_dataFragment"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/data" />
        <item
            android:id="@+id/nav_activity_level"
            android:icon="@drawable/baseline_horizontal_rule_24"
            android:title="Level"
            />
        <item
            android:id="@+id/nav_activity_photo"
            android:icon="@drawable/baseline_camera_24"
            android:title="Change your profile photo"/>
        <item
            android:id="@+id/nav_setting_activity"
            android:icon="@drawable/baseline_mic_24"
            android:title="Settings"/>
        <item
            android:id="@+id/nav_work_data"
            android:icon="@drawable/baseline_dataset_24"
            android:title="Work with Data"/>


    </group>
</menu>