<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.serebriakovaea.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.serebriakovaea.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.serebriakovaea.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_webViewFragment"
        android:name="ru.mirea.serebriakovaea.mireaproject.WebViewFragment"
        android:label="Browser"
        tools:layout="@layout/fragment_web_view" />
    <activity
        android:id="@+id/nav_dataFragment"
        android:name="ru.mirea.serebriakovaea.mireaproject.DataClass"
        android:label="Some data about me"
        tools:layout="@layout/fragment_data" />
    <activity
        android:id="@+id/nav_activity_level"
        android:name="ru.mirea.serebriakovaea.mireaproject.LevelApp"
        android:label="Level"
        tools:layout="@layout/activity_level"/>
    <activity
        android:id="@+id/nav_activity_photo"
        android:name="ru.mirea.serebriakovaea.mireaproject.PhotoActivity"
        android:label="Photo"
        tools:layout="@layout/activity_photo"/>
    <activity
        android:id="@+id/nav_setting_activity"
        android:name="ru.mirea.serebriakovaea.mireaproject.SettingActivity"
        android:label="Settings"
        tools:layout="@layout/activity_settings"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.serebriakovaea.mireaproject.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_work_data"
        android:name="ru.mirea.serebriakovaea.mireaproject.workdata.WorkDataFragment"
        android:label="Work_With_Data"
        tools:layout="@layout/fragment_work_data" />
    <fragment
        android:id="@+id/nav_news"
        android:name="ru.mirea.serebriakovaea.mireaproject.NewsFragment"
        android:label="News"
        tools:layout="@layout/fragment_news"/>
    <fragment
        android:id="@+id/nav_places"
        android:name="ru.mirea.serebriakovaea.mireaproject.PlacesListFragment"
        android:label="Places"
        tools:layout="@layout/fragment_places_list"/>
</navigation>